--- a/css/styles.css
+++ b/css/styles.css
@@ -60,13 +60,6 @@ h1 {
   color: var(--clr-secondary);
 }
 
-.input-btns {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .btn {
   margin-top: 1rem;
   width: 75%;
@@ -82,15 +75,80 @@ h1 {
   box-shadow: 0.1rem 0.2rem 0.2rem rgba(145, 145, 145, 0.5);
 }
 
-/* Modal: Historial de transacciones */
+.modal-bg {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #222034d2;
+}
 
-.history {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+/* Inputs */
+
+.input-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 2rem 0 2rem 2rem;
+  padding-top: 2rem;
+}
+
+form {
+  width: 75%;
+}
+
+select,
+option {
+  font-family: var(--ff-primary);
+  text-align: center;
+}
+
+.btn-icon {
+  width: 5rem;
+  cursor: pointer;
+}
+
+.input {
+  width: 100%;
+  background-color: var(--clr-secondary);
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 1rem 0;
+  text-align: center;
+  color: var(--clr-text);
+}
+
+.back-btn {
+  width: auto;
+  position: absolute;
+  top: -1.5rem;
+  right: -0.5rem;
+  padding: 0.5rem 0.8rem;
+  border-radius: 2rem;
+}
+
+.add-btn {
+  width: 6rem;
+  margin-bottom: 1rem;
+}
+
+/* History */
+
+.history-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60%;
   min-height: 50%;
   padding: 3rem;
   text-align: left;
+  border-radius: 2rem 0 2rem 2rem;
+}
+
+.items-list {
+  list-style-type: none;
 }
 
 .item {
@@ -109,15 +167,28 @@ h1 {
   border: none;
   cursor: pointer;
 }
-    
+
 .icon {
   width: 1rem;
 }
 
-.back-btn {
-    display: block;
-    margin: 1rem auto 0;
-    width: 5rem;
+
+/* Alert */
+
+.alert-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  padding: 2rem;
+  border-radius: 0.8rem;
+  background-color: var(--clr-primary);
+  box-shadow: 0.5rem 0.5rem 0.8rem rgba(61, 61, 61, 0.5);
+}
+
+.alert h1 {
+  color: var(--clr-accent);
 }
 
 .hidden {
@@ -144,5 +215,9 @@ h1 {
   .item {
     grid-template-columns: 60% repeat(2, 1fr);
   }
-}
 
+  .input-container {
+    width: 30%;
+  }
+  
+}
