--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,12 @@
   --clr-bg-blue: #6c63ff;
   --clr-accent: #f37b57;
 
+  /* Dark mode */
+  --clr-dark-primary: #121212;
+  --clr-dark-secondary: #272727;
+  --clr-dark-text: #ffffff;
+
+  /* Fonts */
   --ff-primary: "Poppins", sans-serif;
 }
 
@@ -22,6 +28,8 @@ body {
   background: linear-gradient(var(--clr-bg-blue), var(--clr-bg-purple));
 }
 
+/* General styles */
+
 .container {
   position: absolute;
   top: 50%;
@@ -34,6 +42,59 @@ body {
   background-color: var(--clr-primary);
   box-shadow: 0.5rem 0.5rem 0.8rem rgba(61, 61, 61, 0.5);
 }
+
+.modal-bg {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #222034d2;
+}
+
+.btn {
+  margin-top: 1rem;
+  width: 75%;
+  background-color: var(--clr-bg-blue);
+  color: var(--clr-primary);
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: var(--ff-primary);
+  font-weight: bolder;
+  box-shadow: 0.1rem 0.2rem 0.2rem rgba(145, 145, 145, 0.5);
+}
+
+.btn:hover {
+  background-color: var(--clr-bg-purple);
+}
+
+.settings-btn {
+  width: 1.5rem;
+  position: relative;
+  right: -95%;
+  transform: translateX(-50%);
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+}
+
+.settings-btn:hover {
+  width: 1.6rem;
+}
+
+.back-btn {
+  width: auto;
+  position: absolute;
+  top: -1.5rem;
+  right: -0.5rem;
+  padding: 0.5rem 0.8rem;
+  border-radius: 2rem;
+}
+
+
+
+/* Hero */
 
 .img {
   width: 100%;
@@ -60,38 +121,15 @@ h1 {
   color: var(--clr-secondary);
 }
 
-.btn {
-  margin-top: 1rem;
-  width: 75%;
-  background-color: var(--clr-bg-blue);
-  color: var(--clr-primary);
-  padding: 0.5rem;
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-family: var(--ff-primary);
-  font-weight: bolder;
-  box-shadow: 0.1rem 0.2rem 0.2rem rgba(145, 145, 145, 0.5);
-}
-
-.modal-bg {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  background-color: #222034d2;
-}
-
 /* Inputs */
 
 .input-container {
-  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  border-radius: 2rem 0 2rem 2rem;
   padding-top: 2rem;
+  border-radius: 2rem 0 2rem 2rem;
 }
 
 form {
@@ -120,14 +158,6 @@ option {
   color: var(--clr-text);
 }
 
-.back-btn {
-  width: auto;
-  position: absolute;
-  top: -1.5rem;
-  right: -0.5rem;
-  padding: 0.5rem 0.8rem;
-  border-radius: 2rem;
-}
 
 .add-btn {
   width: 6rem;
@@ -140,9 +170,8 @@ option {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 60%;
   min-height: 50%;
-  padding: 3rem;
+  padding: 2rem;
   text-align: left;
   border-radius: 2rem 0 2rem 2rem;
 }
@@ -152,26 +181,21 @@ option {
 }
 
 .item {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: 0.5rem;
-}
-
-.item-btns {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  padding: 0.5rem 0;
 }
 
 .item-btn {
-  margin-left: 1rem;
+  width: 1rem;
   border: none;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
-.icon {
-  width: 1rem;
+.item-btn:hover {
+  opacity: 0.5;
 }
-
 
 /* Alert */
 
@@ -195,6 +219,14 @@ option {
   display: none;
 }
 
+/* Edit modal */
+
+.old {
+  color: var(--clr-secondary);
+  font-style: italic;
+  text-decoration: line-through;
+}
+
 /* Responsive */
 
 @media screen and (min-width: 680px) {
@@ -207,6 +239,13 @@ option {
     width: 50%;
   }
 
+  .settings-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    transform: translate(0);
+  }
+
   .budget {
     width: 50%;
     padding: 2rem;
@@ -217,7 +256,11 @@ option {
   }
 
   .input-container {
-    width: 30%;
+    width: 40%;
+  }
+
+  .history-container {
+    width: 60%;
   }
   
 }
