--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
   top: 100%;
   background-color: var(--clr-bg-blue);
   padding: 1rem;
-  min-width: 10rem;
+  min-width: 12rem;
   border-radius: 0 1rem 1rem 1rem;
   color: var(--clr-primary);
   cursor: pointer;
@@ -194,7 +194,8 @@ option {
 
 /* History / Overview*/
 
-.history-container, .overview-container {
+.history-container,
+.overview-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -276,6 +277,49 @@ option {
   text-transform: uppercase;
 }
 
+/* Currency exchange balance*/
+
+.currency-container {
+  padding: 2rem;
+  text-align: center;
+}
+
+.curr-title {
+  display: block;
+  color: var(--clr-bg-blue);
+  margin: 1rem 0;
+}
+
+.curr-box {
+  border: 1px solid var(--clr-secondary);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.currency {
+  max-width: 100%;
+  border: none;
+  border-radius: 0.5rem;
+  margin: 0.3rem;
+  padding: 0.2rem 1rem;
+}
+
+#curr-output {
+  color: var(--clr-secondary);
+}
+
+#curr-btn {
+  width: 10rem;
+  margin: auto;
+}
+
+.curr-option {
+  overflow: hidden;
+  text-overflow: clip;
+}
+
 /* Alert */
 
 .alert-container {
@@ -326,7 +370,7 @@ option {
 
   .budget {
     width: 50%;
-    padding: 2rem;
+    min-height: 400px;
   }
 
   .item {
@@ -337,7 +381,8 @@ option {
     width: 40%;
   }
 
-  .history-container, .overview-container {
+  .history-container,
+  .overview-container {
     width: 60%;
   }
 
@@ -355,6 +400,17 @@ option {
 
   .chart-content {
     width: 45%;
+  }
+
+  .currency-container {
+    width: fit-content;
+    flex-direction: column;
+    text-align: center;
+    flex-wrap: wrap;
+  }
+
+  .curr-box {
+    margin: 1rem;
   }
 }
 
